--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1",
     "web-vitals": "^1.0.1"
