--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +17,10 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "@devexpress/dx-react-core": "2.7.5",
+    "@devexpress/dx-react-chart-material-ui": "2.7.5",
+    "@devexpress/dx-react-chart": "2.7.5",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^3.1.14",
@@ -26,6 +31,7 @@
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.3",
     "thunk": "0.0.1",
     "web-vitals": "^1.0.1"
   },
