--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "2.7.5",
+    "@devexpress/dx-react-chart-material-ui": "2.7.5",
+    "@devexpress/dx-react-core": "2.7.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/styles": "^4.11.3",
@@ -17,11 +20,9 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
-    "@devexpress/dx-react-core": "2.7.5",
-    "@devexpress/dx-react-chart-material-ui": "2.7.5",
-    "@devexpress/dx-react-chart": "2.7.5",
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^3.0.15",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.1",
